# netgrad

./: README.md  layer.py  mlp.py  neuron.py  pyproject.toml  requriements.txt  value.py
_netgrad_0/: README.md  requriements.in  requriements.txt
_netgrad_0/examples/: demo0.py  demo1.py  demo2.py
_netgrad_0/netgrad/: __init__.py  op.py
_netgrad_0/netgrad/backend/: numpy_backend.py
_netgrad_0/netgrad/tensor/: base_tensor.py
_value_0/: layer.py  mlp.py
examples/: demo0.py  ex0.py
netgrad/: __init__.py  base_tensor.py  defs.py  numpy_tensor.py  op.py  opencl_tensor.py  tensor.py  utils.py
netgrad/backend/: __init__.py  backend.py  numpy_backend.py
netgrad/tensor/: __init__.py  base_tensor.py  defs.py  numpy_tensor.py  tensor.py
test/: test_tensor.py  test_tensor_pytorch.py
