[tool.poetry]
name = "netgrad"
version = "0.1.0"
description = "A (Not Even a Toy for now) autograd engine."
authors = ["Marko Tasic <mtasic85@gmail.com>"]
license = "MIT"
readme = "README.md"

[[tool.poetry.source]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
pyopencl = "^2023.1.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
torch = { version = ">=2.0.1", source="torch_cpu" }

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
